Issue #3062716 by agami4: Update collapse for email notifaction settings

--- a/modules/custom/activity_send/modules/activity_send_email/css/activity_send_email.admin.scss
+++ b/modules/custom/activity_send/modules/activity_send_email/css/activity_send_email.admin.scss
@@ -25,6 +25,14 @@
 
     }
 
+    > .card__title {
+      border-bottom: none;
+
+      a:not(.collapsed) {
+        border-bottom: 1px solid #e6e6e6;
+      }
+    }
+
     [id*='edit-email-notifications--content'] {
       padding-top: 1rem;
       padding-bottom: 1.5rem;
